# falco

./: .travis.yml  CMakeLists.txt  falco.yaml
cmake/modules/: GetGitRevisionDescription.cmake
docker/builder/: Dockerfile
docker/event-generator/: event_generator.cpp
docker/local/: CMakeLists.txt
docker/local/rules/: CMakeLists.txt
docker/local/traces/: CMakeLists.txt
rules/: CMakeLists.txt  falco_rules.yaml  k8s_audit_rules.yaml
rules/templates/: CMakeLists.txt  k8s_psp_rules.yaml.tmpl
scripts/: CMakeLists.txt
test/: falco_test.py
test/rules/: single_rule.yaml
test/trace_files/: CMakeLists.txt
test/trace_files/k8s_audit/: CMakeLists.txt
test/trace_files/psp/: CMakeLists.txt
tests/: CMakeLists.txt
tests/falco/: test_webserver.cpp
tools/: CMakeLists.txt
tools/psp_conv/: CMakeLists.txt  go.mod  go.sum  main.go
tools/psp_conv/converter/: converter.go  k8s_psp_rules_template.go
userspace/engine/: CMakeLists.txt  falco_common.cpp  falco_common.h  falco_engine.cpp  falco_engine.h  formats.cpp  formats.h  json_evt.cpp  json_evt.h  k8s_psp.cpp  lpeg.h  lyaml.h  rules.cpp  rules.h  ruleset.cpp  ruleset.h
userspace/engine/lua/: parser.lua  rule_loader.lua  sinsp_rule_utils.lua
userspace/falco/: CMakeLists.txt  config_falco.h.in  configuration.cpp  configuration.h  event_drops.cpp  event_drops.h  falco.cpp  falco_outputs.cpp  falco_outputs.h  grpc_context.h  grpc_server.cpp  grpc_server.h  grpc_server_impl.cpp  grpc_server_impl.h  logger.cpp  logger.h  statsfilewriter.cpp  statsfilewriter.h  webserver.cpp  webserver.h
